# live-bootcamp-project

./: Cargo.toml  README.md  compose.yml  docker.sh
.github/workflows/: prod.yml
app-service/: .dockerignore  watch.sh
app-service/src/: main.rs
auth-service/: .dockerignore  Cargo.toml  watch.sh
auth-service/.sqlx/: query-43cea9a97c6a738c39d6ebfeeb5988940ccdb5886cc7875564613700c078ba38.json  query-ab8bcd41215db8add499b51c199b8cf2c7f5345692722743ebfc06038616476b.json
auth-service/migrations/: 20250817083636_create_users_table.up.sql
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mock_email_client.rs  postmark_email_client.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  root.rs  signup.rs  verify_2fa.rs  verify_token.rs
