[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.88"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = "0.4.41"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
validator = "0.20.0"

[dev-dependencies]
fake = "4.3.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
reqwest = { version = "0.12.22", default-features = false, features = [
  "cookies",
  "json",
] }
